// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clipPath renders 0 1`] = `
Array [
  .c0 {
  -webkit-clip-path: 0;
  clip-path: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-path: 0;
  clip-path: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-path: 0;
  clip-path: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-path: 0;
  clip-path: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`clipPath renders function 1`] = `
Array [
  .c0 {
  -webkit-clip-path: hasnot;
  clip-path: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-path: has;
  clip-path: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-path: hasnot;
  clip-path: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-path: has;
  clip-path: has;
}

<div
    className="c0"
  />,
]
`;

exports[`clipPath renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-clip-path: invalid.path.1;
  clip-path: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-path: invalid.path.1;
  clip-path: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-path: invalid.path.1;
  clip-path: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-path: invalid.path.1;
  clip-path: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`clipPath renders negative number 1`] = `
Array [
  .c0 {
  -webkit-clip-path: -54881;
  clip-path: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-path: -54881;
  clip-path: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-path: -42365;
  clip-path: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-path: -42365;
  clip-path: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`clipPath renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  -webkit-clip-path: July;
  clip-path: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip-path: August;
    clip-path: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip-path: September;
    clip-path: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip-path: November;
    clip-path: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-clip-path: August;
    clip-path: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-path: July;
  clip-path: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip-path: August;
    clip-path: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip-path: September;
    clip-path: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip-path: November;
    clip-path: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-clip-path: August;
    clip-path: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-path: January;
  clip-path: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip-path: December;
    clip-path: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip-path: April;
    clip-path: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip-path: May;
    clip-path: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-clip-path: June;
    clip-path: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-path: January;
  clip-path: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip-path: December;
    clip-path: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip-path: April;
    clip-path: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip-path: May;
    clip-path: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-clip-path: June;
    clip-path: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`clipPath renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-clip-path: July;
    clip-path: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip-path: August;
    clip-path: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip-path: September;
    clip-path: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-clip-path: November;
    clip-path: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-clip-path: July;
    clip-path: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip-path: August;
    clip-path: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip-path: September;
    clip-path: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-clip-path: November;
    clip-path: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip-path: May;
    clip-path: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip-path: June;
    clip-path: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip-path: April;
    clip-path: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-clip-path: November;
    clip-path: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip-path: May;
    clip-path: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip-path: June;
    clip-path: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-clip-path: April;
    clip-path: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-clip-path: November;
    clip-path: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`clipPath renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  -webkit-clip-path: July;
  clip-path: July;
}

@media May {
  .c0 {
    -webkit-clip-path: August;
    clip-path: August;
  }
}

@media April {
  .c0 {
    -webkit-clip-path: September;
    clip-path: September;
  }
}

@media January {
  .c0 {
    -webkit-clip-path: November;
    clip-path: November;
  }
}

@media April {
  .c0 {
    -webkit-clip-path: August;
    clip-path: August;
  }
}

@media June {
  .c0 {
    -webkit-clip-path: November;
    clip-path: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-path: July;
  clip-path: July;
}

@media May {
  .c0 {
    -webkit-clip-path: August;
    clip-path: August;
  }
}

@media April {
  .c0 {
    -webkit-clip-path: September;
    clip-path: September;
  }
}

@media January {
  .c0 {
    -webkit-clip-path: November;
    clip-path: November;
  }
}

@media April {
  .c0 {
    -webkit-clip-path: August;
    clip-path: August;
  }
}

@media June {
  .c0 {
    -webkit-clip-path: November;
    clip-path: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-path: April;
  clip-path: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-clip-path: November;
    clip-path: November;
  }
}

@media April {
  .c0 {
    -webkit-clip-path: January;
    clip-path: January;
  }
}

@media January {
  .c0 {
    -webkit-clip-path: December;
    clip-path: December;
  }
}

@media April {
  .c0 {
    -webkit-clip-path: April;
    clip-path: April;
  }
}

@media June {
  .c0 {
    -webkit-clip-path: May;
    clip-path: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-path: April;
  clip-path: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-clip-path: November;
    clip-path: November;
  }
}

@media April {
  .c0 {
    -webkit-clip-path: January;
    clip-path: January;
  }
}

@media January {
  .c0 {
    -webkit-clip-path: December;
    clip-path: December;
  }
}

@media April {
  .c0 {
    -webkit-clip-path: April;
    clip-path: April;
  }
}

@media June {
  .c0 {
    -webkit-clip-path: May;
    clip-path: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`clipPath renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    -webkit-clip-path: July;
    clip-path: July;
  }
}

@media April {
  .c0 {
    -webkit-clip-path: August;
    clip-path: August;
  }
}

@media January {
  .c0 {
    -webkit-clip-path: September;
    clip-path: September;
  }
}

@media April {
  .c0 {
    -webkit-clip-path: November;
    clip-path: November;
  }
}

@media June {
  .c0 {
    -webkit-clip-path: August;
    clip-path: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-clip-path: July;
    clip-path: July;
  }
}

@media April {
  .c0 {
    -webkit-clip-path: August;
    clip-path: August;
  }
}

@media January {
  .c0 {
    -webkit-clip-path: September;
    clip-path: September;
  }
}

@media April {
  .c0 {
    -webkit-clip-path: November;
    clip-path: November;
  }
}

@media June {
  .c0 {
    -webkit-clip-path: August;
    clip-path: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-clip-path: January;
    clip-path: January;
  }
}

@media April {
  .c0 {
    -webkit-clip-path: December;
    clip-path: December;
  }
}

@media January {
  .c0 {
    -webkit-clip-path: April;
    clip-path: April;
  }
}

@media April {
  .c0 {
    -webkit-clip-path: May;
    clip-path: May;
  }
}

@media June {
  .c0 {
    -webkit-clip-path: June;
    clip-path: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-clip-path: January;
    clip-path: January;
  }
}

@media April {
  .c0 {
    -webkit-clip-path: December;
    clip-path: December;
  }
}

@media January {
  .c0 {
    -webkit-clip-path: April;
    clip-path: April;
  }
}

@media April {
  .c0 {
    -webkit-clip-path: May;
    clip-path: May;
  }
}

@media June {
  .c0 {
    -webkit-clip-path: June;
    clip-path: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`clipPath renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-clip-path: 54881;
  clip-path: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-path: 54881;
  clip-path: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-path: 42365;
  clip-path: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-path: 42365;
  clip-path: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`clipPath renders string 1`] = `
Array [
  .c0 {
  -webkit-clip-path: July;
  clip-path: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-path: July;
  clip-path: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-path: June;
  clip-path: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-path: June;
  clip-path: June;
}

<div
    className="c0"
  />,
]
`;

exports[`clipPath renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`clipPath renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-clip-path: DarkSlateBlue;
  clip-path: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-path: DarkSlateBlue;
  clip-path: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-path: DarkSlateBlue;
  clip-path: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-clip-path: DarkSlateBlue;
  clip-path: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
